# Trading-Bot

./: .gitignore  Cargo.toml  README.md  setup.sh
.agent/: context.md  dashboard_plan.md  memory.md  rules.md
.claude/: settings.local.json
api/: main.ts  package.json
src/: database.rs  execution.rs  ingestion.rs  main.rs  polymarket.rs  prices.rs  risk.rs  strategy.rs  types.rs
ts/: main.ts  package.json
ts/dashboard/: index.html
ts/src/: binance_ws.ts  client.ts  config.ts  dashboard_api.ts  data_collector.ts  db.ts  env_setup.ts  execution.ts  force_init_db.ts  index.ts  index_v2.ts  inspect_market.ts  latency_bot.ts  latency_strategy.ts  list_db_data.ts  market.ts  pattern_analyzer.ts  position_sizing.ts  prices.ts  rate_limiter.ts  run_both.ts  run_collector.ts  run_dashboard.ts  sanity_check.ts  strategy.ts  strategy_v2.ts  test_db.ts  types.ts  verify_binance.ts  verify_strike_price.ts
