[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"] }
alloy = { version = "0.1", features = ["full"] }
simd-json = "0.13"
rtrb = "0.3"
ruint = "1.12"
core_affinity = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
url = "2.5"
chrono = "0.4"
hex = "0.4"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"] }
bigdecimal = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
